Minor deprecated methods change